--- a/kafka-sub.properties
+++ b/kafka-sub.properties
@@ -33,7 +33,7 @@ listeners=INSIDE://:9093,OUTSIDE://:9092
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
-advertised.listeners=INSIDE://:9093,OUTSIDE://127.0.0.1:9092
+#advertised.listeners=INSIDE://:9093,OUTSIDE://127.0.0.1:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 listener.security.protocol.map=PLAINTEXT:PLAINTEXT,INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
