--- a/kafka-sub.properties
+++ b/kafka-sub.properties
@@ -74,9 +74,11 @@ num.recovery.threads.per.data.dir=1
 ############################# Internal Topic Settings  #############################
 # The replication factor for the group metadata internal topics "__consumer_offsets" and "__transaction_state"
 # For anything other than development testing, a value greater than 1 is recommended for to ensure availability such as 3.
-offsets.topic.replication.factor=1
+offsets.topic.replication.factor=2
 transaction.state.log.replication.factor=1
 transaction.state.log.min.isr=1
+# min.insync.replicas=1
+
 
 ############################# Log Flush Policy #############################
 
@@ -90,10 +92,10 @@ transaction.state.log.min.isr=1
 # every N messages (or both). This can be done globally and overridden on a per-topic basis.
 
 # The number of messages to accept before forcing a flush of data to disk
-log.flush.interval.messages=100
+log.flush.interval.messages=1
 
 # The maximum amount of time a message can sit in a log before we force a flush
-log.flush.interval.ms=60000
+log.flush.interval.ms=1000
 
 ############################# Log Retention Policy #############################
 
